# hope-re

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/: COMMIT_CONVENTION.md  CONTRIBUTING.md
.github/workflows/: lint.yml  publish.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/onnx_integration/: capabilities.rs  mod.rs  model_downloader.rs  session.rs
src-tauri/src/onnx_integration/protection/: algorithms.rs  mod.rs  model.rs  preprocessing.rs  spsa.rs  tiling.rs  types.rs
src/lib/: constants.ts
src/lib/components/: index.ts
src/lib/components/header/: index.svelte  system-info-dialog.svelte  theme-toggle.svelte  update-button.svelte
src/lib/components/main/image-placeholders/: base-image.svelte  image-fullscreen-dialog.svelte  rendered-image.svelte  types.ts
src/lib/components/main/menu/: index.svelte
src/lib/components/main/menu/adjustments/: algorithm-select.svelte  (+5 more)
src/lib/components/main/resource-download/: resource-download-guard.svelte
src/lib/components/minimized-dock/: minimized-dock.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/dialog/: dialog-content.svelte
src/lib/components/ui/file-drop-zone/: file-drop-zone-trigger.svelte  file-drop-zone.svelte
src/lib/components/ui/icons/: cat-icon.svelte  download-icon.svelte  index.ts
src/lib/components/ui/progress/: progress.svelte
src/lib/components/ui/select/: select-content.svelte  select-group-heading.svelte  select-item.svelte  select-scroll-down-button.svelte  select-scroll-up-button.svelte  select-trigger.svelte
src/lib/components/ui/separator/: separator.svelte
src/lib/components/ui/slider/: slider.svelte
src/lib/components/updater/: update-dialog.svelte
src/lib/queries/: inference.ts
src/lib/stores/: use-image.svelte.ts  use-model-download.svelte.ts  use-protection.svelte.ts  use-theme.svelte.ts  use-updater.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+1 files in other folders)
