[package]
name = "hope-ad"
version = "2.1.11"
description = "An AI-proofing arts app"
authors = [ "HopeArtOrg" ]
license = "MIT"
repository = "https://github.com/HopeArtOrg/hope-re"
edition = "2021"
rust-version = "1.93.1"

[lib]
name = "hope_remake_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2.3.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
sysinfo = "0.36.1"
image = "0.25"
base64 = "0.22"
ndarray = { version = "0.17", features = [ "std" ] }
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls",
  "stream",
  "system-proxy"
] }
tokio = { version = "1", features = [
  "fs",
  "io-util",
] }
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.9", default-features = false, features = [
  "ndarray",
  "copy-dylibs",
  "download-binaries",
  "tls-rustls",
  "cuda",
  "directml"
] }
windows = { version = "0.61.3", features = [
  "Win32_Graphics_Dxgi",
  "Win32_System_Com"
] }

[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies]
ort = { version = "2.0.0-rc.9", default-features = false, features = [
  "ndarray",
  "copy-dylibs",
  "download-binaries",
  "tls-rustls",
  "cuda",
  "xnnpack"
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
ort = { version = "2.0.0-rc.9", default-features = false, features = [
  "ndarray",
  "copy-dylibs",
  "download-binaries",
  "tls-rustls",
  "coreml"
] }

[target.'cfg(all(target_os = "android", target_arch = "aarch64"))'.dependencies]
ort = { version = "2.0.0-rc.9", default-features = false, features = [
  "ndarray",
  "copy-dylibs",
  "download-binaries",
  "tls-rustls",
  "xnnpack"
] }
